AE: update itailan translations PR6-8
Thanks to Francesco Teodori

Change-Id: I0ac67603c83628bf8e7825e0728590e63775f3da

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -19,7 +19,7 @@
     <string name="logo">logo</string>
     <string name="display_animations_title">Display e animazioni</string>
     <string name="multishit_title">Multeplici Bizzarrie</string>
-    <string name="transparency_porn_title">Transparenze</string>
+    <string name="transparency_porn_title">Trasparenze</string>
     <string name="notificaitons_title">Pannello Notifiche</string>
     <string name="statubar_title">Barra di stato</string>
     <string name="lockscreen_title">Schermata di blocco</string>
@@ -275,14 +275,14 @@
     <string name="recents_fullscreen_summary_enabled">Recenti a tutto schermo abilitati</string>
     <string name="recents_fullscreen_summary_disabled">Recenti a tutto schermo disabilitati</string>
     <string name="recents_full_screen_clock_title">Mostra orologio</string>
-    <string name="recents_full_screen_clock_summary">Mostra orologio in alto quando a tutto shermo</string>
+    <string name="recents_full_screen_clock_summary">Mostra orologio in alto quando a tutto schermo</string>
     <string name="recents_full_screen_date_title">Mostra la data</string>
     <string name="recents_full_screen_date_summary">Mostra la  data in alto quando a tutto schermo</string>
 
     <!-- Weather settings -->
     <string name="weather_lockscreen_category">Opzioni meteo per la schermata di blocco</string>
     <string name="weather_cat_notifications_title">Notifiche</string>
-    <string name="weather_settings_title">Impostazioni orologio shermata di blocco</string>
+    <string name="weather_settings_title">Impostazioni orologio schermata di blocco</string>
     <string name="weather_settings_summary">Configura posizione del widget meteo e altri impostazioni</string>
     <string name="weather_lockscreen_show_title">Meteo su schermata di blocco</string>
     <string name="weather_lockscreen_show_summary">Mostra meteo su schermata di blocco</string>
@@ -363,8 +363,8 @@
     <string name="notif_drawer_weather_summary">Abilita/disabilita informazioni meteo sul cassetto notifiche</string>
 
     <!-- Power menu on lock screen -->
-    <string name="powermenu_lockscreen_title">Menu accenzione su schermata di blocco</string>
-    <string name="powermenu_lockscreen_summary">Mostra menu accenzione su schermata di blocco</string>
+    <string name="powermenu_lockscreen_title">Menu accensione su schermata di blocco</string>
+    <string name="powermenu_lockscreen_summary">Mostra menu accensione su schermata di blocco</string>
 
     <!-- ROm Stats -->
     <!-- Main -->
@@ -680,8 +680,8 @@
     <string name="headset_connect_player_summary">Avvia l\'applicazione musicale di default quando le cuffie sono connesse.</string>
 
     <!-- Recent panel -->
-    <string name="recent_panel_category">Pannello applicazioni recenti snello</string>
-    <string name="use_slim_recents_title">Recenti snello</string>
+    <string name="recent_panel_category">Pannello applicazioni recenti sottile</string>
+    <string name="use_slim_recents_title">Pannello recenti sottile</string>
     <string name="show_running_tasks_title">Mostra solo le applicazioni in esecuzione</string>
     <string name="recents_max_apps_title">Massimo numero di applicazioni ammesso</string>
     <string name="recent_panel_scale_title">Dimensioni</string>
@@ -745,7 +745,7 @@
     <string name="trigger_top_title">Posizione Interruttore</string>
     <string name="trigger_top_summary">Imposta la posizione verticale dell\'area interruttore</string>
     <string name="trigger_bottom_title">Altezza Interruttore</string>
-    <string name="trigger_bottom_summary">Imposta l'altezza dell\'area interruttore</string>
+    <string name="trigger_bottom_summary">Imposta l\'altezza dell\'area interruttore</string>
 
     <!-- Wakelock blocker -->
     <string name="wakelock_blocker_title">Wakelock Blocker</string>
@@ -755,19 +755,19 @@
     <string name="block_on_secure_keyguard_summary">Disabilita impostazioni rapide sulla schermata di blocco solo in caso di blocco sicuro</string>
 
     <!-- QS shade transparency -->
-    <string name="qs_transparent_shade">Trasparenza Impostazioni Rapide</string>
+    <string name="qs_transparent_shade">Impostazioni Rapide</string>
 
     <!-- QS header transparency -->
-    <string name="qs_transparent_header">Trasparenza Intestazione Impostazioni Rapide</string>
+    <string name="qs_transparent_header">Intestazione Impostazioni Rapide</string>
 
     <!-- Volume dialog transparency -->
-    <string name="volume_dialog_transparency">Trasparenza dialogo volume</string>
+    <string name="volume_dialog_transparency">Dialogo volume</string>
 
     <!-- Power menu and dialogs transparency -->
-    <string name="power_menu_transparency">Trasparenza menu accensione/riavvio</string>
+    <string name="power_menu_transparency">Menu accensione/riavvio</string>
 
     <!-- Power/reboot dialogs dim amount -->
-    <string name="power_menu_dialog_dim">Ammontare offuscamento dello sfondo del dialogo Accensione/Riavvio</string>
+    <string name="power_menu_dialog_dim">Offuscamento Sfondo Dialogo Accensione/Riavvio</string>
 
     <!-- Lockscreen Torch -->
     <string name="keyguard_torch_title">Torcia su schermata di blocco</string>
