Italian translation updates

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -571,7 +571,7 @@
     <string name="wallpaper_close_title">Animazione sfondo in apertura</string>
     <string name="wallpaper_intra_open_title">Animazione chiusura galleria sfondi</string>
     <string name="wallpaper_intra_close_title">Animazione apertura galleria sfondi</string>
-    <string name="task_open_behind_title">Task open behind animation</string>
+    <string name="task_open_behind_title">Animazione apri task in secondo piano</string>
     <string name="animation_duration_title">Durata animazione</string>
     <string name="animation_duration_default">Default</string>
     <string name="title_animation_no_override">Prevenire Prevaricazione App</string>
