AE: italian translation updates and fixes
Thanks to Francesco Teodori

Change-Id: Iaf4adcf502e72f09d0f39fff30de9fdc55cd94c6

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -571,7 +571,7 @@
     <string name="wallpaper_close_title">Animazione sfondo in apertura</string>
     <string name="wallpaper_intra_open_title">Animazione chiusura galleria sfondi</string>
     <string name="wallpaper_intra_close_title">Animazione apertura galleria sfondi</string>
-    <string name="task_open_behind_title">Task open behind animation</string>
+    <string name="task_open_behind_title">Animazione apri task in secondo piano</string>
     <string name="animation_duration_title">Durata animazione</string>
     <string name="animation_duration_default">Default</string>
     <string name="title_animation_no_override">Prevenire Prevaricazione App</string>
@@ -741,7 +741,7 @@
     <string name="tab_size_summary">Cambia le dimensioni della tab.</string>
     <string name="trigger_category">Regione Interruttore</string>
     <string name="trigger_width_title">Ampiezza interruttore</string>
-    <string name="trigger_width_summary">Imposta l\'ampizza dell\'area interruttore</string>
+    <string name="trigger_width_summary">Imposta l\'ampiezza dell\'area interruttore</string>
     <string name="trigger_top_title">Posizione Interruttore</string>
     <string name="trigger_top_summary">Imposta la posizione verticale dell\'area interruttore</string>
     <string name="trigger_bottom_title">Altezza Interruttore</string>
@@ -816,4 +816,14 @@
     <string name="status_bar_custom_header_shadow_summary">Per una migliore visibilità su immagini luminose</string>
     <string name="unit_percent">\u0025</string>
 
+    <!-- AdAway -->
+    <string name="adaway_settings_title">AdAway</string>
+
+    <!-- Hide Apps from Recents -->
+    <string name="hide_apps_from_recents_title">Applicazioni Nascoste</string>
+    <string name="hide_apps_from_recents_summary">Quali applicazioni escludere dal pannello recenti</string>
+
+    <!-- Current on Lockscreen -->
+    <string name="lock_screen_show_current">Tasso di ricarica</string>
+    <string name="lock_screen_show_current_summary">Mostra il tasso di ricarica sulla schermata di blocco</string>
 </resources>
