AE: Updated DE translations by Ralf Luther
Change-Id: Ibe0021f7e06ced7c9643280c7d0eb4bcac8773fe

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -450,7 +450,7 @@
     <string name="double_tap_sleep_anywhere_summary">Zweimal auf das Display tippen, um das Gerät in den Ruhezustand zu versetzen</string>
 
     <!-- PA Pie control -->
-    <string name="pa_piecontrol_settings_summary">Anpassung von PA Pie 3.0 Zielen, Stil, Größe und Farbe</string>
+    <string name="pa_piecontrol_settings_summary">Anpassung von PA PIE 3.0 Zielen, Stil, Größe und Farbe</string>
     <string name="pa_pie_control_title">PIE Displaynavigation</string>
     <string name="pa_pie_control_enable_title">Schaltet die PIE Displaynavigation ein</string>
     <string name="pa_pie_always_right_title">PIE am rechten Displayrand</string>
@@ -828,5 +828,16 @@
     <!-- Current on Lockscreen -->
     <string name="lock_screen_show_current">Aufladungsstärke</string>
     <string name="lock_screen_show_current_summary">Zeigt die aktuelle Stromstärke beim Ladevorgang auf dem Sperrbildschirm an.</string>
+
+    <!-- Floating Windows -->
+    <string name="shortcut_action_floating_windows">Schwebende Fenster</string>
+    <string name="floating_master_switch">Hauptschalter</string>
+    <string name="floating_additional_options">Zusätzliche Schwebe-Funktionen</string>
+    <string name="floating_windows">Schwebende Fenster</string>
+    <string name="floating_windows_switch">Entweder ist der Schwebemodus global aktiviert oder nicht. Ist er deaktiviert, wird keine der unten stehenden Optionen funktionieren!</string>
+    <string name="slim_action_floats">Slim Aktionen &amp; PIE</string>
+    <string name="slim_action_floats_summary">Starte Slim &amp; PIE-Aktionen im Schwebemodus</string>
+    <string name="gesture_anywhere_floating">Gesten überall</string>
+    <string name="gesture_anywhere_floating_summary">Starte \"Gesten überall\"-Verknüpfungen im Schwebemodus</string>
 
 </resources>
