AE: update Italian translations
Added floating windows translations
thanks to Francesco Teodori

Change-Id: I122432c1395d0ab89a5003e22a5bccb3578928be

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -826,4 +826,15 @@
     <!-- Current on Lockscreen -->
     <string name="lock_screen_show_current">Tasso di ricarica</string>
     <string name="lock_screen_show_current_summary">Mostra il tasso di ricarica sulla schermata di blocco</string>
+
+    <!-- Floating Windows -->
+    <string name="shortcut_action_floating_windows">Floating Windows</string>
+    <string name="floating_master_switch">Interruttore Principale</string>
+    <string name="floating_additional_options">Opzioni Float addizionali</string>
+    <string name="floating_windows">Floating Windows</string>
+    <string name="floating_windows_switch">Se permettere, o meno, globalmente l\'uso della modalità float. Con permesso negato, nessuna delle opzioni seguenti funzionerà. DUH!!!</string>
+    <string name="slim_action_floats">Menù comandi sottile &amp; a torta</string>
+    <string name="slim_action_floats_summary">Lancia il menu comandi sottile &amp; a torta Actions in modalità Floating Window</string>
+    <string name="gesture_anywhere_floating">Azioni Ovunque</string>
+    <string name="gesture_anywhere_floating_summary">Lancia i collegamenti ad azioni ovunque in modalità float</string>
 </resources>
