AE: update italian translations
Thanks to Francesco Teodori

Change-Id: Id9038c3b316326e0b6520eac537b6e985167630c

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -18,7 +18,7 @@
     <string name="welcome_title">BENVENUTO\nnel mondo reale!!!</string>
     <string name="logo">logo</string>
     <string name="display_animations_title">Display e animazioni</string>
-    <string name="multishit_title">Multeplici Bizzarrie</string>
+    <string name="multishit_title">Molteplici Bizzarrie</string>
     <string name="transparency_porn_title">Trasparenze</string>
     <string name="notificaitons_title">Pannello Notifiche</string>
     <string name="statubar_title">Barra di stato</string>
@@ -182,16 +182,16 @@
     <string name="show_headset_icon_summary">Mostra l\'icona quando le cuffie sono connesse.</string>
 
     <!-- Gesture Anywhere -->
-    <string name="gesture_anywhere_title">Azioni ovunque</string>
-    <string name="gesture_anywhere_enabled_title">Azioni ovunque</string>
-    <string name="gesture_anywhere_enabled_summary">Abilita la proprietà Azioni Ovunque</string>
+    <string name="gesture_anywhere_title">Gesture ovunque</string>
+    <string name="gesture_anywhere_enabled_title">Gesture ovunque</string>
+    <string name="gesture_anywhere_enabled_summary">Abilita la proprietà Gesture Ovunque</string>
     <string name="gesture_anywhere_position_title">Posizione</string>
     <string name="gesture_anywhere_position_left">Bordo sinistro</string>
     <string name="gesture_anywhere_position_right">Bordo destro</string>
-    <string name="gesture_anywhere_gestures_title">Azioni</string>
-    <string name="gesture_anywhere_gestures_summary">Aggiungi, rimuovi, e edita azioni</string>
+    <string name="gesture_anywhere_gestures_title">Gesture</string>
+    <string name="gesture_anywhere_gestures_summary">Aggiungi, rimuovi, e edita gesture</string>
     <!-- Label, button used to add a gesture -->
-    <string name="ga_button_add">Aggiungi Azione</string>
+    <string name="ga_button_add">Aggiungi Gesture</string>
     <!-- Label, button used to reload all gestures -->
     <string name="ga_button_reload">Aggiorna</string>
     <!-- Label, button used to cancel the operation of adding a gesture -->
@@ -203,30 +203,30 @@
     <!-- Error message, informs the user he needs to enter a name before saving a gesture -->
     <string name="ga_error_missing_name">Devi inserire un nome</string>
     <!-- success message, tells the user where the gesture was saved -->
-    <string name="ga_save_success">Azione salvata in %s</string>
+    <string name="ga_save_success">Gesture salvata in %s</string>
     <!-- Buttons in Rename gesture dialog box -->
     <string name="ga_rename_action">OK</string>
     <!-- Buttons in Rename gesture dialog box -->
     <string name="ga_cancel_action">Cancella</string>
     <!-- Message displayed when the user opens the gestures settings screen -->
-    <string name="ga_gestures_loading">Carico Azione...</string>
+    <string name="ga_gestures_loading">Carico Gesture...</string>
     <!-- Message displayed when the user has no gestures -->
-    <string name="ga_gestures_empty">Nessun Azione</string>
+    <string name="ga_gestures_empty">Nessun Gesture</string>
     <!-- Title of the screen used to view/manage gestures -->
-    <string name="ga_gestures_activity">Azioni</string>
+    <string name="ga_gestures_activity">Gesture</string>
     <!-- Noun, menu item used to edit a gesture -->
     <string name="ga_gestures_edit">Modifica</string>
     <!-- Noun, menu item used to remove a gesture -->
     <string name="ga_gestures_delete">Elimina</string>
     <!-- Message displayed when a gesture is successfully deleted -->
-    <string name="ga_gestures_delete_success">Azione eliminata</string>
+    <string name="ga_gestures_delete_success">Gesture eliminata</string>
     <!-- Title of dialog box -->
-    <string name="ga_gestures_rename_title">Rinomina Azione</string>
+    <string name="ga_gestures_rename_title">Rinomina Gesture</string>
     <!-- Label of gesture name field in Rename gesture dialog box -->
-    <string name="ga_gestures_rename_label">Nome del Azione</string>
+    <string name="ga_gestures_rename_label">Nome del Gesture</string>
     <!-- Message, displayed when the sdcard cannot be found, 1st parameter is the name of the file that stores the gestures.  CHAR LIMIT=80 -->
     <string name="ga_gestures_error_loading">Impossibile caricare %s. Controlla la memoria disponibile.</string>
-    <string name="trigger_category">Attribuzione azioni</string>
+    <string name="trigger_category">Attribuzione gesture</string>
     <string name="picker_activities">Attività</string>
     <string name="select_custom_app_title">Seleziona applicazione</string>
     <string name="select_custom_activity_title">Seleziona attività</string>
@@ -540,7 +540,7 @@
     <string name="system_app_remover">Disinstallatore applicazioni di sistema</string>
 
     <!-- Three-fingers-swipe to screenshot -->
-    <string name="three_finger_gesture">Azione tre dita</string>
+    <string name="three_finger_gesture">Gesture tre dita</string>
     <string name="three_finger_gesture_summary">Fai scorrere tre dita per catturare schermata</string>
 
     <!-- SU -->
@@ -835,6 +835,6 @@
     <string name="floating_windows_switch">Se permettere, o meno, globalmente l\'uso della modalità float. Con permesso negato, nessuna delle opzioni seguenti funzionerà. DUH!!!</string>
     <string name="slim_action_floats">Menù comandi sottile &amp; a torta</string>
     <string name="slim_action_floats_summary">Lancia il menu comandi sottile &amp; a torta Actions in modalità Floating Window</string>
-    <string name="gesture_anywhere_floating">Azioni Ovunque</string>
-    <string name="gesture_anywhere_floating_summary">Lancia i collegamenti ad azioni ovunque in modalità float</string>
+    <string name="gesture_anywhere_floating">Gesture Ovunque</string>
+    <string name="gesture_anywhere_floating_summary">Lancia i collegamenti a gesture ovunque in modalità float</string>
 </resources>
