Italian translation updates

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -707,7 +707,7 @@
     <string name="recents_show_membar_summary">Visualizza barra con la memoria disponibile sul dispositivo</string>
 
     <!-- Show/Hide Search Bar -->
-    <string name="recents_show_searchbar">Visualizzza barra di ricerca sul menu recenti</string>
+    <string name="recents_show_searchbar">Visualizza Barra di Ricerca</string>
     <string name="keywords_recents_show_searchbar">recente recenti disabilita abilita visualizza nascondi barra ricerca</string>
 
     <!-- Screenshot sound -->
@@ -751,7 +751,7 @@
     <string name="wakelock_blocker_title">Wakelock Blocker</string>
 
     <!-- Quick settings disable on lockscreen -->
-    <string name="block_on_secure_keyguard_title">Disabilita impostazioni rapide sulla schermata di blocca</string>
+    <string name="block_on_secure_keyguard_title">Impostazioni rapide su schermata di blocca</string>
     <string name="block_on_secure_keyguard_summary">Disabilita impostazioni rapide sulla schermata di blocco solo in caso di blocco sicuro</string>
 
     <!-- QS shade transparency -->
@@ -794,11 +794,11 @@
     <string name="status_bar_header_font_style_title">Stile dei font dell\'intestazione</string>
 
     <!-- QS Tiles Columns -->
-    <string name="qs_num_columns_title">Numero di tessere QS per riga</string>
+    <string name="qs_num_columns_title">Tessere impostazioni rapide per riga</string>
     <string name="qs_num_columns_showing">Sono visibili %1$s tessere per riga</string>
 
     <!-- QS Tiles Rows -->
-    <string name="qs_num_rows_title">Numero di righe QS</string>
+    <string name="qs_num_rows_title">Righe pannello impostazioni rapide</string>
     <string name="qs_num_rows_showing">Sono visibili %1$s righe</string>
 
     <!-- Lockscreen Colors -->
@@ -834,7 +834,7 @@
     <string name="floating_windows">Floating Windows</string>
     <string name="floating_windows_switch">Se permettere, o meno, globalmente l\'uso della modalità float. Con permesso negato, nessuna delle opzioni seguenti funzionerà. DUH!!!</string>
     <string name="slim_action_floats">Menù comandi sottile &amp; a torta</string>
-    <string name="slim_action_floats_summary">Lancia il menu comandi sottile &amp; a torta Actions in modalità Floating Window</string>
+    <string name="slim_action_floats_summary">Lancia il menu comandi sottile &amp; a torta in modalità Floating Window</string>
     <string name="gesture_anywhere_floating">Gesture Ovunque</string>
     <string name="gesture_anywhere_floating_summary">Lancia i collegamenti a gesture ovunque in modalità float</string>
 </resources>
